--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>im not lying</title>
     </head>
-    <body style="background-color: #111111; color:#FFFFFF">
+    <body style="background-color: #111111; color:#FFFFFF;>
         <center>
             <h1 id="ip-address"></h1>
             <h1 id="isp"></h1>
