--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     </head>
     <body style="background-color: #111111; color:#FFFFFF;>
         <center>
-            <h1 id="ip-address"></h1>
-            <h1 id="isp"></h1>
-            <h1 id="region"></h1>
-            <h1 id="hostname"></h1>
-            <h1 id="user-agent"></h1>
-            <h1 id="platform"></h1>
+            <p id="ip-address"></p>
+            <p id="isp"></p>
+            <p id="region"></p>
+            <p id="hostname"></p>
+            <p id="user-agent"></p>
+            <p id="platform"></p>
         </center>
 
         <script>
